[package]
name = "rustoguelike"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chargrid_graphical = "0.2.3"
chargrid = "0.3.0"
coord_2d = "0.2.22"
rgb24 = "0.2.7"
direction = "0.17.10"
