[package]
name = "rustoguelike"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
chargrid = "0.3"
chargrid_graphical = "0.2"
coord_2d = "0.2"
direction = "0.17"
entity_table = "0.2"
grid_2d = "0.14"
grid_search_cardinal = "0.2"
line_2d = "0.4"
rand = "0.7"
rand_isaac = "0.2"
rgb24 = "0.2"
simon = "0.4"
shadowcast = "0.7"
spatial_table = "0.2"
